--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,23 +11,24 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/hi_message"
         android:text="Click Me!"
         android:id="@+id/button" />
     <TextView
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/hi_message" />
 
-    <LinearLayout
+    <ListView
         android:orientation="vertical"
         android:layout_width="200dp"
         android:layout_height="fill_parent"
         android:layout_below="@+id/button"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView"
+        android:layout_toRightOf="@+id/hi_message"
+        android:layout_toEndOf="@+id/hi_message"
         android:background="#fffafeff"
-        android:id="@+id/things"></LinearLayout>
+        android:id="@+id/exampleList"
+        android:headerDividersEnabled="false" />
 
 </RelativeLayout>
