--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,23 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/hi_message"
+        android:layout_below="@+id/hi_world"
         android:text="Click Me!"
-        android:id="@+id/button" />
+        android:id="@+id/mainbutton" />
     <TextView
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/hi_message" />
+        android:id="@+id/hi_world" />
 
     <ListView
         android:orientation="vertical"
         android:layout_width="200dp"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/button"
-        android:layout_toRightOf="@+id/hi_message"
-        android:layout_toEndOf="@+id/hi_message"
+        android:layout_below="@+id/button2"
+        android:layout_toRightOf="@+id/hi_world"
+        android:layout_toEndOf="@+id/hi_world"
         android:background="#fffafeff"
-        android:id="@+id/exampleList"
-        android:headerDividersEnabled="false" />
+        android:id="@+id/exampleList"></ListView>
 
 </RelativeLayout>
