--- a/app/src/main/res/layout/activity_fragment_tester.xml
+++ b/app/src/main/res/layout/activity_fragment_tester.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,4 +25,4 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_weight="50" />
-</FrameLayout>
+</LinearLayout>
