--- a/app/src/main/res/layout/activity_fragment_tester2.xml
+++ b/app/src/main/res/layout/activity_fragment_tester2.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,4 +28,4 @@
         android:layout_height="0dp"
         android:layout_weight="50"
         android:id="@+id/f2" />
-</FrameLayout>
+</LinearLayout>
